45
================

11/06/21 When movement animal changes, update for animal #1008
11/06/21 Use native browser support for sticky table headers #908
10/06/21 Bug calculating the end of a report group for header counts
10/06/21 PetLink: support new submitDate column
10/06/21 Hide inactive lookups in smartphone interface
10/06/21 Do not include hidden raw markup fields in form submissions
10/06/21 Prevent duplicate fields in online form preview
09/06/21 Select all icon in tables now toggles #533
09/06/21 Fix datepicker focus issue on lost/found screens
08/06/21 Vacc/Medical give buttons linked to wrong permission
08/06/21 Never include generated timestamp in form preview
08/06/21 Online form preview should respond to forenames/surname
08/06/21 Select all icon in tables #533
07/06/21 asm3_onlineform_submit callback function for forms
07/06/21 Ability to rename headers for SAC CSV Export
07/06/21 Use the database report header for maps and charts
07/06/21 Remove .html and _ from subject when emailing from media
04/06/21 Ability to title case headers for SAC CSV Export
02/06/21 CTRL+A: only select visible rows and only when table is focused #1014
02/06/21 Remove inactive log types from email dialogs #1016
02/06/21 HomeAgain: issue with blank forenames for orgs
01/06/21 Fix for online form checkbox/radio on mobile layout
01/06/21 SavourLife: support holding listings for animals in care
27/05/21 Type bug caused bulk screen to set units to -1
27/05/21 Upgrade fullcalendar to last of 3.x series #998
25/05/21 Allow multiple dispatch ACOs #995
25/05/21 csvimport: Attach licenses to original owner for nonshelter
23/05/21 Add missing watermark button icon
23/05/21 Add US territories to state code list
17/05/21 Stop form checkbox labels taking up all width
17/05/21 Use exact breed matching for SavourLife
15/05/21 Only calculate total alerts from visible alerts
12/05/21 csvimport: support foster capacity (Saggi Neumann)